# x86_opcode_bruteforcer

./: .gitignore  ALL_opcodes.json  LICENSE  README.md  SAME_opcodes.json  pyproject.toml  scan.py
